--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -10,12 +10,15 @@
     <PackageReference Include="Dapper.Mapper" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Pages\Solicitud\" />
-    <Folder Include="wwwroot\App\" />
   </ItemGroup>
 
   <ItemGroup>
